[project]
name = "capston-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pandasai>=2.0.24",
    "pillow>=10.4.0",
    "plotly>=6.7.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
